(add) CRUDメソッドまでの実装及び、最適化モジュールの実装

--- a/docs/実行手順.md
+++ b/docs/実行手順.md
@@ -1,7 +1,8 @@
 # APIサーバーの起動について
-起動方法は以下のいずれか。
-- main.pyを実行。
-- コマンド`uvicorn main:app --reload`を実行する。
+プロジェクトフォルダ直下で、以下のコマンドを実行する。
+```
+uvicorn api.main:app --reload
+```
 
 # 最適化APIの実行
 実行方法は以下のいずれか。
