(update) クラウドデプロイ処理を実装

--- a/docs/不具合.md
+++ b/docs/不具合.md
@@ -80,3 +80,18 @@ https://toyo.hatenablog.jp/entry/2022/03/02/234159
 調査すると、以下の対応策が確認できた。
 - docker-compose.yamlに`platform: linux/x86_64`を追加する。これはうまくいかなかった。
 - ベースのイメージとして、mysql:8.0ではなく、arm64v8/mysql:8.0を使用する。こちらは、コンテナを立ち上げることができた。
+
+## イメージをビルドする際にplatformオブションでlinux/amd64を指定するとエラーになる。
+### 事象
+docker buildする際に、`--platform linux/amd64`を追加すると、以下のエラーが発生する。poetryをインストールする箇所でエラーとなる。
+```
+=> ERROR [3/8] RUN pip install poetry                                                                                                                   0.2s
+------
+ > [3/8] RUN pip install poetry:
+0.185 exec /bin/sh: exec format error
+------
+ERROR: failed to solve: executor failed running [/bin/sh -c pip install poetry]: exit code: 1
+```
+
+### 推定原因
+不明。現在調査中。
