(update) ドキュメント作成

--- a/docs/不具合.md
+++ b/docs/不具合.md
@@ -19,9 +19,26 @@ OSError: [Errno 8] Exec format error: '/src/.venv/lib/python3.11/site-packages/p
 
 - ログを見るとpulpのoptimzeメソッド実行時に上記エラーが発生。
 - ソルバーバイナリフォルダ`solverdir`には、`linux`の他にも`osx`があり、mac os環境下ではおそらくそちらが実行されている。
+- 以下の対応策の参考になったサイトは以下の通り。
+    - githubのissue(https://github.com/coin-or/pulp/issues/102)
+    - githubのissue(https://github.com/davidusb-geek/emhass-add-on/issues/9)
+    - ubuntuへのcbcソルバインストール(https://howtoinstall.co/package/coinor-cbc)
+    - pulpの代わりにpython-MIPという最適化ライブラリを使ったdocker環境構築(https://zenn.dev/snail_tanishi/scraps/9174c51981cade)
+
 
 ### 対応策
-調査中
+- linux及びarm64環境下で実行可能な、cbcバイナリファイルを別でインストールし、pulp実行時にソルバパスを指定する。
+- 具体的な手順は以下の通り。
+    - Dockerfileに以下の行を追加する。以下はlinux向けのcbcソルバをインストールするコマンドである。コンテナ内では`/usr/bin/cbc`に配置される。
+        ```
+        RUN apt-get update && apt-get install -y coinor-cbc
+        ```
+    - pythonスクリプトでpulpを使用する際は、以下のようにソルバパスを設定する。ただし、`problem`は最適化問題が定義されているオブジェクト。
+        ```
+        path_to_solver = '/usr/bin/cbc'
+        solver = pulp.COIN_CMD(path=path_to_solver)
+        problem.solve(solver)
+        ```
 
 # FastAPI関連
 
